--- a/codegen.yml
+++ b/codegen.yml
@@ -1,5 +1,5 @@
 overwrite: true
-schema: "http://kfa-server:4000"
+schema: "http://localhost:4001"
 documents: "schema/**/*.gql"
 generates:
   generated/graphql.tsx:
